--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ aside p{
     color: rgba(255,255,255,.75);
 }
 aside img{
-    widht:100%;
+    width:100%;
     height:auto;
     opacity: 0.5;
 }
